	* utils/list.json: Fix wrong json format.
	* utils/ptt.json: Fix wrong json format.
	* utils/ptt.json: Fix wrong json format.
	* utils/hichannel.json,
	utils/ptt.json: Add property.
	* po/zh_TW.po,
	src/betaradio.c,
	src/gstplay.c,
	src/gstplay.h: Add mp3 streaming support and allow different sources.
	* po/zh_TW.po,
	utils/ptt.json: Rename pttradio's title.

2010-06-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am: Not to install header files.
	* src/betaradio.c: Not to blink icon.
	* src/betaradio.c, 
	web/hichannel.json -> utils/hichannel.json: Change source.
	* web/jquery.cookie.js,
	web/jquery.timers.js,
	web/player.css,
	web/player.html,
	web/player.ico,
	web/player.js: Remove unneeded files.
	* po/zh_TW.po: Update language translation.
	* src/betaradio.c: Check icon before use.
	* configure.ac: Update GTK+ requirement.
	* autogen.sh,
	po/zh_TW.po,
	src/betaradio.c: Polish.
	* data/betaradio.desktop.in: Update language translation.

2010-06-25  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* data/radio-off.png,
	data/radio-on.png,
	src/channel.c,
	src/channel.h,
	src/eggtrayicon.c,
	src/eggtrayicon.h,
	src/radiosite.c,
	src/radiosite.h,
	src/sitelist.h: Remove unneeded files.
	* data/betaradio.png: Change new icon.
	* configure.ac,
	data/Makefile.am,
	src/Makefile.am: Update autotools config.
	* po/POTFILES.in,
	po/zh_TW.po: Update language translation.
	* src/betaradio.c,
	src/gstplay.c,
	src/streamplayer.h -> src/gstplay.h: Apply to new architechure design.

2010-06-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* web/player.html,
	web/player.ico,
	web/Icon.png: Update site icon.
	* web/player.html,
	web/hichannel.json: Update to jQuery 1.4.2

2010-01-17  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* web/radio-128.png,
	web/radio-19.png,
	web/radio-32.png,
	web/radio-48.png,
	web/Icon.png: Keep one 128x128 icon.
	* web/player.css,
	web/player.html,
	web/player.js: Adjust UI.
	* utils/hichannel.html,