@@ -14,6 +14,7 @@
 	src/gstplay.h: Add mp3 streaming support and allow different sources.
 	* po/zh_TW.po,
 	utils/ptt.json: Rename pttradio's title.
+	* src/gstplay.c: Enlarge blocksize to 320KBytes.
 
 2010-06-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
